4p.css
body{background-image:url(day1.jpg);}

/*header*/
#header{height: 5%;width: 100%;min-height: 30px;text-align: center;border-bottom: 1px solid #888888;background-color:rgba(80,80,80,0.2);}
#homeButton,#mapButton,#locate{display: inline-block;border: none;outline: none;color: #FFFFFF;height: 100%;margin:0;font-size: 110%;}
#homeButton{/**/padding-left: 6%;/**/padding-right: 3%;border-right: 1px solid #888888;}
#mapButton{/**/padding-left: 3%;/**/padding-right: 6%;border-left: 1px solid #888888;}

/*slide1*/
#slide1{/**/margin-left:6%;position:fixed;/**/width:94%;height:95%;z-index:1000;max-height: 95%;overflow-y:auto;padding-left: 2%;}
#slide1 #name{font-family:"Open Sans",sans-serif;/**/font-size: 4.4em;color: #FFFFFF;font-weight:700;/**/margin-top: 4%;}
#slide1 #country{font-family:"Open Sans",sans-serif;font-size: 2.5em;color: white;font-weight: 400;}
#slide1 .temper{/**/margin-top: 6%;}
#slide1 #temperature{font-family:"Open Sans",sans-serif;color: white;margin-bottom: -1.2%;font-size: 2.8em;font-weight: 700;}
#slide1 .icon{display: inline-block;width: 90%;/**/max-width: 360px;/**/max-height: 320px;/**/margin-left: 33%;/**/margin-top: -16%;/**/margin-bottom: -7%;}
#slide1 .weather,#slide1 .place,#slide1 .time,#slide1 .temper{font-family:"Open Sans";font-weight: 400;margin:0;margin-top: 1%;padding:0;color: white;}
#slide1 .humidity img,#slide1 .pressure img, #slide1 .wind img{width: 5%; min-width: 30px;}
#slide1 h2{display: inline-block;/**/margin-right: 2%;}
#slide1 .forecast{display:inline-block;color: white;font-family:"Open Sans";overflow:hidden;width:auto;max-width:30%;}
#slide1 #forecasticon{display: inline-block;width:30%;/**/margin-bottom:1.5%;}
#slide1 .weather,#slide1 .temper{width: 70%;max-width:70%;float: left;color: white;}
#slide1 .weather h1{font-size: 2.2em;}

/*common*/
#slide1 .time,#slide2 .time{color: gold;font-family:"Open Sans",sans-serif;}
hr{border-color: #555555 !important;margin-right: 15%;}
button{max-height: 100%;background-color: Transparent;min-width: 6%;}
.forecast{/**/font-size: 90%;color: white;font-family:"Open Sans";overflow:hidden;width:auto;}
.humidity img,.wind img,.pressure img{width:13%;}

/*slide2*/
#slide2{height: 95%;width:100%;margin:0;position:fixed;padding:0;z-index:0;visibility: hidden;}
#slide2 #name{font-family:"Open Sans",sans-serif;/**/font-size: 3.7em;/**/margin-bottom: -1%;color: white;font-weight:700;}
#slide2 #country{font-family:"Open Sans",sans-serif;font-size: 2.2em;color: white;font-weight: 400;}
#slide2 #map{/**/width: 70%;height: 100%;float:left;border: 1px solid black;}
#slide2 #temperature{font-family:"Open Sans",sans-serif;color: white;margin-bottom: -1%;font-size: 260%;font-weight: 700;}
#slide2 #forecasticon{display: inline-block;/**/width:55%;/**/max-height:10%;/**/margin-top:-5%;/**/margin-bottom:-5%;}
#slide2 h2{/**/margin-top: -0.5%;/**/margin-bottom: -0.5%;}
#slide2 .ftval{display: inline-block;}
#slide2 .data{overflow:hidden;/**/width: 30%;height: 100%;max-height:100%;overflow-y:auto;border: 1px solid black;padding-left: 2%;}
#locationIcon{max-height: 70%;margin-left: 3%;margin-right:3%;}
#slide2 .icon{width: 100%;/**/max-width: 280px;/**/max-height: 250px;/**/margin-left:-2%;/**/margin-right: -2%;}
#tempunits{color:#CCCCCC;font-weight: 100;font-size: 60%;text-shadow: none;font-family: serif;}
.weather,.place,.time,.temper{font-family:"Open Sans";width:auto;max-width:100%;font-weight: 400;margin:0;padding:0;}
#slide2 .weather,#slide2 .temper{width:60%;max-width:60%;float: left;color: white;}

/*media queries*/

@media screen and (max-height:870px){
  #slide1 #name{font-size: 3.75em;margin-top:2%;margin-bottom: -0.2%;}
  #slide1 #country{font-size: 2.2em;}
  #slide1 #temperature{font-size: 2.5em;}
  #slide1 .temper{margin-top: 0.8%;margin-bottom: -0.5%;}
  #slide1 .time h1{font-size: 2.35em;margin-bottom: -0.4%;color: gold;}
  #slide1 .forecast{margin-top: -2.5%;}
  #slide1 .forecast h2{display: inline-block;font-size: 1.8em;}
  #slide1 #forecasticon{margin-top:-0.5%;margin-bottom:-0.5%;}
  #slide1 .icon{margin-bottom: -7%;max-width:340px;}
  #slide1 .weather h1{font-size: 2.1em;}
}

@media screen and (max-height:792px){
  #slide1 #name{font-size: 3.55em;margin-top:1.6%;margin-bottom: -0.35%;}
  #slide1 #country{font-size: 2em;}
  #slide1 #temperature{font-size: 2.3em;}
  #slide1 .temper{margin-top: 0.6%;margin-bottom: -0.6%;}
  #slide1 .time h1{font-size: 2.15em;margin-bottom: -0.85%;color: gold;}
  #slide1 .forecast{margin-top: -3.5%;}
  #slide1 .forecast h2{display: inline-block;font-size: 1.7em;}
  #slide1 #forecasticon{margin-top: -1%;margin-bottom:-1%;}
  #slide1 .icon{margin-bottom: -9%;max-width:320px;}
  #slide1 .weather h1{font-size: 1.85em;}
}

@media screen and (max-height:726px){
  #slide1 #name{font-size: 3.25em;margin-top:1.4%;margin-bottom: -0.45%;}
  #slide1 #country{font-size: 1.8em;}
  #slide1 #temperature{font-size: 2.2em;}
  #slide1 .temper{margin-top: 0.45%;margin-bottom: -0.55%;}
  #slide1 .time h1{font-size: 1.9em;margin-bottom: -1.1%;color: gold;}
  #slide1 .forecast{margin-top: -4.5%;}
  #slide1 .forecast h2{display: inline-block;font-size: 1.55em;}
  #slide1 #forecasticon{margin-top: -2.25%;margin-bottom:-2.25%;}
  #slide1 .icon{margin-bottom: -11.5%;max-width:290px;}
  #slide1 .weather h1{font-size: 1.65em;}
}

@media screen and (max-height:660px){
  #slide1 #name{font-size: 3.1em;margin-top:1.4%;margin-bottom: -0.5%;}
  #slide1 #country{font-size: 1.7em;}
  #slide1 #temperature{font-size: 2.15em;}
  #slide1 .temper{margin-top: 0.4%;margin-bottom: -0.6%;}
  #slide1 .time h1{font-size: 1.8em;margin-bottom: -1%;color: gold;}
  #slide1 .forecast{margin-top: -5%;}
  #slide1 .forecast h2{display: inline-block;font-size: 1.5em;}
  #slide1 #forecasticon{margin-top: -2.5%;margin-bottom:-2.5%;}
  #slide1 .icon{margin-bottom: -13%;max-width:280px;}
  #slide1 .weather h1{font-size: 1.6em;}
}

@media screen and (max-height: 610px){
  #slide1 #name{font-size: 2.7em;margin-top:1.4%;margin-bottom: -0.7%;}
  #slide1 #country{font-size: 1.5em;}
  #slide1 #temperature{font-size: 1.9em;}
  #slide1 .temper{margin-top: 0.2%;margin-bottom: -0.75%;}
  #slide1 .time h1{font-size: 1.6em;margin-bottom: -1.1%;color: gold;}
  #slide1 .forecast{margin-top: -7%;}
  #slide1 .forecast h2{display: inline-block;font-size: 1.3em;}
  #slide1 #forecasticon{margin-top: -2.7%;margin-bottom:-2.7%;}
  #slide1 .icon{margin-bottom: -15%;max-width:260px;}
  #slide1 .weather h1{font-size: 1.4em;}
}

@media screen and (max-height: 540px){
  #slide1 #name{font-size: 2.5em;margin-top:1.4%;margin-bottom: -0.8%;}
  #slide1 #country{font-size: 1.4em;}
  #slide1 #temperature{font-size: 1.7em;}
  #slide1 .temper{margin-top: 0.1%;margin-bottom: -0.8%;}
  #slide1 .time h1{font-size: 1.5em;margin-bottom: -1.2%;color: gold;}
  #slide1 .forecast{margin-top: -8%;}
  #slide1 .forecast h2{display: inline-block;font-size: 1.2em;}
  #slide1 #forecasticon{margin-top: -2.9%;margin-bottom:-2.9%;}
  #slide1 .icon{margin-bottom: -17%;max-width:250px;}
  #slide1 .weather h1{font-size: 1.3em;margin-bottom: -0.3%;}
}


@media screen and (max-width:400px) and (orientation: portrait){
  #header{height: 8%;}
  #locate{width: 20%;}
  #slide1,.data{margin:0%;width: 100%;padding-left: 2%;}

  #slide2 #map{
    width:100%;
    height:60%;
    float:none;
  }

  #slide2 .data{
    width:100%;
    height:40%;
  }

  #slide1 #name,#slide2 #name{
    font-size: 2.1em;
  }
  #slide1 #country,#slide2 #country{
    font-size: 1.4em;
    margin:1%;
    margin-bottom:-1%;
  }

  #slide1 .time h1,#slide2 .time h1{
    font-size: 1.4em;
    margin-bottom: -2%;
  }

  #slide1 .temper,#slide2 .temper{
    margin-top: -1%;
    margin-bottom:-5%;
  }

  #slide1 #temperature,#slide2 #temperature{
    font-size: 1.8em;
  }

  #slide1 .icon,#slide2 .icon{
    margin-left: 1%;
  }

  #slide1 .weather,#slide2 .weather{
    width: 55%;
  }

  #slide1 .forecast,#slide2 .forecast{
    max-width: 45% !important;
    margin-left:0;
    padding-left:0;
  }

  #slide1 .forecast h2,#slide2 .forecast h2{
    font-size: 1em;
    margin-top: -3%;
    margin-bottom: -3%;
  }
}

